# PROJECT_SMART_AI_TRAFIC_MANAGEMENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  inference.py  metadata.json  openapi.yaml  openenv.yaml  openenvy.yaml  package.json  package_workspace.py  pyproject.toml  validator.py  vite.config.ts
bench/: graders.py  tasks.json
ml/: README.md  requirements.txt
ml/configs/: yolo_high_accuracy.yaml
ml/datasets/traffic_vehicles/: dataset.yaml
ml/datasets/traffic_vehicles/labels/: train.cache  val.cache
ml/datasets/traffic_vehicles/labels/bus_extra_staging/: video6_002.txt  video6_004.txt  video6_007.txt  video6_009.txt  video6_010.txt  video6_011.txt  video6_012.txt  video6_013.txt  video6_019.txt  video6_020.txt  video6_024.txt  video6_026.txt  video6_028.txt  video6_029.txt  video6_030.txt  video6_032.txt  video6_033.txt  video6_034.txt  video6_035.txt  video6_037.txt  video6_040.txt  video6_044.txt  video6_047.txt  video6_048.txt  video6_053.txt  (+23 more)
ml/scripts/: auto_label_frames.py  clean_generated_labels.py  detect_common.py  detect_frame.py  detect_worker.py  extract_frames.py  run_inference.py  split_dataset.py  train_yolo.py
public/videos/: README.txt
scripts/: dev.js
server/: __init__.py  app.py  benchmark.ts  index.ts  precomputed_detections.json
src/: App.tsx  index.css
src/components/: AdminLogin.tsx  AnalysisDashboard.tsx  CCTVSelector.tsx  Dashboard.tsx  Home.tsx  LaneCard.tsx  ModelTraining.tsx  TrafficLight.tsx
src/hooks/: useTrafficSimulation.ts
src/lib/: cameraFeeds.ts  detectionApi.ts
(+1610 files in other folders)
