[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartflow-ai-submission"
version = "0.1.0"
description = "Submission package metadata for SmartFlow AI benchmark validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.30.0",
  "openenv-core>=0.2.0,<0.3.0",
  "PyYAML>=6.0.2",
  "requests>=2.32.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
server = "server.app:server"
